2011-08-30 Roman
- !:DB: Save and load big table's fields fro text of included tag with field name is added.
- SYS: No translated system charset "ANSI_X3.4-1968" is added.
- !!!!:FIX: The functions getUnalign*() for unaligned access on ARM and like is fixed. Detected on PXA270.
- FIX:DAQ.JavaLikeCal: The user's object function real::toFixed() is fixed to all width process for signed values.
- UI.Vision: New demands for QT 4.6 and more is wrapped.


2011-08-29 Roman
- FIX:SYS: Save to config file first table's item is fixed.
- FIX:DB.MySQL: Key limit to 1000 (300 UTF8) symbols hack is added for alow DB copy from SQLite to MySQL.
- !!!!:FIX:Transport.Sockets: No init length for return value of getsockopt() is fixed.


2011-08-27 Roman
- FIX:TCntrNode: User API object function nodeAt() is fixed for separated address process.
- FIX:TFunction: Modify flag set for "Object" type is fixed.
- FIX:UI.VCAEngine: Object type attributes process is fixed.
- FIX:UI.Vision: Selection clear on set no present value into items is fixed for "List" view of primitive "FormEl".
- DAQ: Object type DAQ value display is added to OpenSCADA control interface, for now usable only for
    UI.VCAEngine attributes.


2011-08-26 Roman
- SYS: ZLib check is added and SQLite check is changed into configure build system script.
- SYS: Disable pthread_setaffinity() and policy SCHED_BATCH is added for GLibC version < 2.5


2011-08-25 Roman
- !!!!:UI.VCAEngine: Object type to widget's attributes suport is added. Mostly object attributes pointed for use
    into a widget script for data store and interaction on a session time.


2011-08-22 Roman
- UI.QTCfg: Force "StyledPanel" border enable for Text and Table widgets for user's resize allow.


2011-08-21 Roman
- FIX:DAQ.Template: Remove template function's doubled IO, on the template enable, is added.
- FIX:DAQ: Check archives to attribute's address for prevent doubled for values archives is added.


2011-08-18 Roman